# devrc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Devrcfile  LICENSE  README.md  build.rs  devrc  rustfmt.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: audit.yml  ci.yml  compile.yml  light_ci.yml  publish.yml  release.yml
.rpm/: devrc.spec
cli/: Cargo.toml
cli/src/: auth.rs  cache.rs  config.rs  devrcfile.rs  env_file.rs  errors.rs  evaluate.rs  execute.rs  include.rs  interpreter.rs  lib.rs  loader.rs  netrc.rs  registry.rs  resolver.rs  runner.rs  template.rs  utils.rs  workshop.rs
cli/src/denoland/: mod.rs  module_loader.rs  tokio_rt.rs
cli/src/interpreter/: mod.rs  plugins.rs  shebang.rs  system.rs
cli/src/raw/: auth.rs  config.rs  devrcfile.rs  mod.rs
cli/src/tasks/: complex.rs  examples.rs  exec.rs  mod.rs  params.rs  params_parser.rs  result.rs
core/: Cargo.toml  README.md  build.rs
core/src/: lib.rs  logging.rs
docs/: README.md
examples/: .env  .env_2  demo_1.yml  demo_env_files.yml  deno_usage.yml  example_1.yml  example_plugins.yml  simple_demo.yml  subtasks.yml  templates.yaml
examples/remote/: .env_1  .env_2  .env_3  entry.yml  remote.yml
plugins/: Cargo.toml  README.md  build.rs
plugins/src/: config.rs  errors.rs  execution.rs  lib.rs  options.rs  plugin.rs
src/: cli.rs  config.rs  de.rs  devrc_log.rs  devrcfile.rs  docs.rs  environment.rs  errors.rs  evaluate.rs  execute.rs  include.rs  interpreter.rs  interrupt.rs  lib.rs  main.rs  raw_devrcfile.rs  registry.rs  runner.rs  scope.rs  template.rs  user_agent.rs  utils.rs  variables.rs  variables_parser.rs  workshop.rs
src/denoland/: import_map.rs  mod.rs  program_state.rs  workers.rs
src/tasks/: arguments.rs  complex.rs  examples.rs  exec.rs  mod.rs  params.rs  params_parser.rs  subtask_call.rs
tests/: test_devrcfile.rs  test_environment.rs  test_include.rs  test_main.rs  test_tasks.rs  test_variables.rs
xtests/: before_and_after.toml  help.toml  test_base.toml  test_deno.toml  test_params.toml
xtests/devrcfiles/: before_after.yml  test_base.yml  test_deno.yml  test_params.yml
xtests/outputs/: before_and_after_execute_test_1_stderr.ansitxt  before_and_after_execute_test_1_stdout.ansitxt  before_and_after_execute_test_2_stderr.ansitxt  before_and_after_execute_test_2_stdout.ansitxt  before_and_after_list_tasks.ansitxt  help.ansitxt  test_base_test_1_1_stderr.ansitxt  test_base_test_1_1_stdout.ansitxt  test_base_test_2_1_stderr.ansitxt  test_base_test_2_1_stdout.ansitxt  test_base_test_3_1_stderr.ansitxt  test_base_test_3_1_stdout.ansitxt  test_base_test_4_1_stdout.ansitxt  test_deno_test_1_stderr.ansitxt  test_deno_test_1_stdout.ansitxt  test_help_test_1_1_stdout.ansitxt  test_help_test_3_1_stdout.ansitxt  test_params_test_1_1_stderr.ansitxt  test_params_test_1_2_success_stderr.ansitxt  test_params_test_1_success_stdout.ansitxt  test_params_test_2_1_stderr.ansitxt  test_params_test_2_1_stdout.ansitxt  test_params_test_2_2_stderr.ansitxt  test_params_test_2_2_stdout.ansitxt  test_params_test_3_1_stderr.ansitxt  test_params_test_3_1_stdout.ansitxt  test_params_test_3_2_stderr.ansitxt  test_params_test_3_2_stdout.ansitxt  test_params_test_3_3_stderr.ansitxt  test_params_test_3_3_stdout.ansitxt
