[package]
name = "devrc"
version = "0.3.0"
authors = ["Alex <hey.turbo.driver@gmail.com>"]
description = "devrc is an easy to use task runner tool on steroids for developers"
edition = "2018"
keywords = ["tasks", "automation", "makefile", "command-line"]
categories = ["command-line-utilities",  "development-tools", "config"]
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/devrc-hub/devrc"
repository = "https://github.com/devrc-hub/devrc"

include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md", "CHANGELOG.md", "build.rs"]

build = "build.rs"


[dependencies]
env_logger = "0.8.2"
log = "0.4.11"
serde = { version = "1.0.123", features = ["derive"] }
serde_yaml = "0.8.17"
structopt = "0.3.21"
lazy_static = "1.4.0"

# yaml-merge-keys = "0.4.1"

# Simple crate for parsing user input.
# casual = "0.2.0"
dirs-next = "2.0.0"
# openssl = { version = "0.10.32", features = ["vendored"] }
# Not used yet
# reqwest = { version = "0.10.9", features = ["blocking", "json"] }
indexmap = { version="1.6.1", features = ["serde-1"] }
ansi_term = "0.12.1"
dotenv = "0.15.0"
tera = "1.6.1"
unicode-width = "0.1.8"
atty = "0.2.14"
tempfile = "3.2.0"
ctrlc = "3.1.8"
# For remote command execution
# ssh2 = "0.9.1"

anyhow = "1.0.38"

deno_core = { version = "0.82.0", optional = true, default_features = false }
deno_runtime = { version = "0.10.0", optional = true, default_features = false }
deno_3p_lib = {version = "1.8.2", optional = true, default_features = false}

tokio = { version = "1.4.0", features = ["full"]}
tokio-rustls = {version = "0.22.0"}


[build-dependencies]
datetime = { version = "0.5.1", default_features = false }

[features]

deno = ["deno_core", "deno_runtime", "deno_3p_lib"]


[profile.dev]
opt-level = 0
debug = 2
lto = false

[profile.test]
opt-level = 0
debug = 2
lto = false

[profile.release]
opt-level = 3


[[bin]]
name = "devrc"
path = "src/main.rs"
doc = false


[badges]
maintenance = { status = "actively-developed" }


[package.metadata.deb]
extended-description = "devrc is an easy to use task runner tool on steroids for developers"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    # binary
    ["target/release/devrc", "usr/bin/", "755"],
]
changelog = "CHANGELOG.md"
default-features = false

[package.metadata.deb.variants.deno]
features = ["deno"]

[package.metadata.rpm]
package = "devrc"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
devrc = { path = "/usr/bin/devrc" }
