[workspace]
resolver="2"
members = [
    "cli",
    "plugins",
    "core"
]

default-members = ["cli", "core", "plugins"]

# [workspace.package]
# version = "0.4.0"
# authors = ["Alex <hey.turbo.driver@gmail.com>"]
# description = "devrc is an easy to use task runner tool on steroids for developers"
# repository = "https://github.com/devrc-hub/devrc"
# homepage = "https://github.com/devrc-hub/devrc"
# license-file = "README.md"

# [workspace.dependencies]


[profile.dev]
opt-level = 0
debug = 2
lto = false

[profile.test]
opt-level = 0
debug = 2
lto = false

[profile.release]
opt-level = 3
