[package]
name = "devrc"
edition = "2018"
version = "0.4.0"

description = "devrc is an easy to use task runner tool on steroids for developers"
keywords = ["tasks", "automation", "makefile", "command-line"]
categories = ["command-line-utilities",  "development-tools", "config"]
readme = "README.md"

authors = ["Alex <hey.turbo.driver@gmail.com>"]
repository = "https://github.com/devrc-hub/devrc"
homepage = "https://github.com/devrc-hub/devrc"
license-file = "../LICENSE"


include = ["src/**/*", "Cargo.toml", "../LICENSE", "README.md", "../CHANGELOG.md", "./build.rs"]

build = "build.rs"

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0.141", features = ["derive"] }
serde_yaml = "0.9.9"
structopt = "0.3.26"
lazy_static = "1.4.0"
chrono = "0.4.19"

# yaml-merge-keys = "0.4.1"

# Simple crate for parsing user input.
# casual = "0.2.0"
dirs-next = "2.0.0"
# openssl = { version = "0.10.32", features = ["vendored"] }
# Not used yet
reqwest = { version = "0.11.17", features = ["blocking", "json"] }
indexmap = { version="1.9.1", features = ["serde-1"] }
ansi_term = "0.12.1"
dotenvy = "0.15.7"
tera = "1.17.0"
unicode-width = "0.1.9"
atty = "0.2.14"
tempfile = "3.3.0"
ctrlc = "3.2.3"
# For remote command execution
# ssh2 = "0.9.1"

sha256 = "1.1.3"
url = "2.3.1"

anyhow = "1.0.62"

tokio = { version = "1.19.2", features = ["full"]}
tokio-rustls = {version = "0.23.4"}

devrc-plugins = { path = "../plugins", version = "0.4.0"}
devrc-core = { path = "../core", version = "0.4.0"}

[build-dependencies]
datetime = { version = "0.5.2", default_features = false }


[[bin]]
name = "devrc"
path = "src/main.rs"
doc = false


[badges]
maintenance = { status = "actively-developed" }


[package.metadata.deb]
extended-description = "devrc is an easy to use task runner tool on steroids for developers"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    # binary
    ["target/release/devrc", "usr/bin/", "755"],
]
changelog = "../CHANGELOG.md"
default-features = false

[package.metadata.rpm]
package = "devrc"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
devrc = { path = "/usr/bin/devrc" }
