[package]
name = "devrc"
edition = "2018"
version = "0.6.0"

license = "MIT"

description = "devrc is an easy to use task runner tool on steroids for developers"
keywords = ["tasks", "automation", "makefile", "command-line"]
categories = ["command-line-utilities",  "development-tools", "config"]
readme = "../README.md"

authors = ["Alex <hey.turbo.driver@gmail.com>"]
repository = "https://github.com/devrc-hub/devrc"
homepage = "https://github.com/devrc-hub/devrc"


include = ["src/**/*", "Cargo.toml", "../LICENSE", "../README.md", "../CHANGELOG.md", "./build.rs"]

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
structopt = "0.3.26"
lazy_static = "1.4.0"

# yaml-merge-keys = "0.4.1"

# Simple crate for parsing user input.
# casual = "0.2.0"
dirs-next = "2.0.0"
# openssl = { version = "0.10.32", features = ["vendored"] }
# Not used yet
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
indexmap = { version="2.0.2", features = ["serde"] }
ansi_term = "0.12.1"
dotenvy = "0.15.7"
tera = "1.19.1"
unicode-width = "0.1.11"
atty = "0.2.14"
tempfile = "3.8.0"
ctrlc = "3.4.1"
# For remote command execution
# ssh2 = "0.9.1"

sha256 = "1.4.0"
url = "2.4.1"

anyhow = "1.0.75"

devrc-plugins = { path = "../plugins", version = "0.6.0" }
devrc-core = { path = "../core", version = "0.6.0" }
netrc-rs = "0.1.2"
base64 = "0.21.4"
duration-str = "0.7.0"

[build-dependencies]
datetime = { version = "0.5.2", default_features = false }


[[bin]]
name = "devrc"
path = "src/main.rs"
doc = false


[badges]
maintenance = { status = "actively-developed" }


[package.metadata.deb]
extended-description = "devrc is an easy to use task runner tool on steroids for developers"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    # binary
    ["target/release/devrc", "usr/bin/", "755"],
]
changelog = "../CHANGELOG.md"
default-features = false

[package.metadata.generate-rpm]
package = "devrc"

assets = [
    { source = "../target/release/devrc", dest = "/usr/bin/devrc", mode = "0755" },
    { source = "../LICENSE", dest = "/usr/share/doc/devrc/LICENSE", doc = true, mode = "0644" },
    { source = "../README.md", dest = "/usr/share/doc/devrc/README.md", doc = true, mode = "0644" }
]

[package.metadata.generate-rpm.cargo]
buildflags = ["--release"]

[package.metadata.generate-rpm.targets]
devrc = { path = "/usr/bin/devrc" }
