[package]
name = "devrc-core"
edition = "2018"
version = "0.6.0"
description = "Core devrc components"

license = "MIT"

keywords = ["tasks", "automation", "makefile", "command-line"]
categories = ["command-line-utilities",  "development-tools", "config"]
readme = "README.md"

authors = ["Alex <hey.turbo.driver@gmail.com>"]
repository = "https://github.com/devrc-hub/devrc"
homepage = "https://github.com/devrc-hub/devrc"

include = ["src/**/*", "Cargo.toml", "../LICENSE", "README.md", "../CHANGELOG.md", "./build.rs"]

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
anyhow = "1.0.75"
ansi_term = "0.12.1"

[build-dependencies]
datetime = { version = "0.5.2", default_features = false }


[lib]
name = "devrc_core"
path = "src/lib.rs"
doc = false


[badges]
maintenance = { status = "actively-developed" }
