[package]
name = "devrc-plugins"
edition = "2018"
version = "0.6.0"
description = "Library for creating plugins for devrc"

license = "MIT"

keywords = ["tasks", "automation", "makefile", "command-line"]
categories = ["command-line-utilities",  "development-tools", "config"]
readme = "README.md"

authors = ["Alex <hey.turbo.driver@gmail.com>"]
repository = "https://github.com/devrc-hub/devrc"
homepage = "https://github.com/devrc-hub/devrc"


include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md", "../CHANGELOG.md", "./build.rs"]

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
libloading = "0.8.1"
anyhow = "1.0.75"
indexmap = { version="2.0.2", features = ["serde"] }
devrc-core = { path = "../core", version = "0.6.0" }


[build-dependencies]
datetime = { version = "0.5.2", default_features = false }


[lib]
name = "devrc_plugins"
path = "src/lib.rs"
doc = false


[badges]
maintenance = { status = "actively-developed" }
